# SimpleRT

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
debian/: changelog  control  copyright  g-simple-rt.default  g-simple-rt.init
simple-rt-android/app/src/main/java/com/viper/simplert/: TetherService.java
simple-rt-android/app/src/main/res/xml/: accessory_filter.xml
simple-rt-android/prebuilt/: g-simple-rt-0.0.1.apk
simple-rt-cli/: Makefile  Makefile.am  g-simple-rt-iface-up.sh  g-simple-rt.c
